# matrix-calculator-PA2

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  makezip.sh  prohlaseni.txt  zadani.txt
config/: calculator_config.conf
examples/: config.json
examples/invalid/: invalid_1_in.txt  invalid_1_out.txt  invalid_2_in.txt  invalid_2_out.txt  invalid_3_in.txt  invalid_3_out.txt  invalid_4_in.txt  invalid_4_out.txt  invalid_5_in.txt  invalid_5_out.txt  invalid_6_in.txt  invalid_6_out.txt  invalid_7_in.txt  invalid_7_out.txt  invalid_8_in.txt  invalid_8_out.txt  invalid_9_in.txt
examples/invalid_cfgs/: invalid_cfg2.json  invalid_cfg3.json  invalid_cfg4.json  invalid_cfg5.json  invalid_cfg6.json  invalid_cfg7.json
examples/sample_imports/: sample1.json  sample2.json  sample3.json
examples/valid/: valid_1_in.txt  valid_1_out.txt  valid_2_in.txt  valid_2_out.txt  valid_3_in.txt  valid_3_out.txt  (+4 more)
src/: AbstractMatrixIterator.cpp  AbstractMatrixIterator.h  BaseHandler.cpp  BaseHandler.h  Configurator.cpp  Configurator.h  DenseMatrix.cpp  DenseMatrix.h  DenseMatrixIterator.cpp  DenseMatrixIterator.h  Evaluator.cpp  Evaluator.h  Exporter.cpp  Exporter.h  FileHandler.cpp  FileHandler.h  Importer.cpp  Importer.h  InputHandler.cpp  InputHandler.h  InputReader.cpp  InputReader.h  IteratorWrapper.cpp  IteratorWrapper.h  Lexer.h  Matrix.cpp  Matrix.h  MatrixDimensions.cpp  MatrixDimensions.h  MatrixElement.h  MatrixFactory.cpp  MatrixFactory.h  MatrixMemoryRepr.cpp  MatrixMemoryRepr.h  Operator.h  OperatorLookup.h  ParsedInput.cpp  ParsedInput.h  Parser.cpp  Parser.h  (+8 more)
(+74 files in other folders)
